--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset = "UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Star Wars RPG</title>
+	<title>WWF Battle Royal</title>
 
 	<!--Meyer reset-->
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -28,7 +28,7 @@
 			<div class = "col-xs-12 col-sm-12 col-md-4 col-md-push-8 col-lg-4 col-lg-push-8">
 				<div id = "header">
 					<img src="assets/images/WWF_LOGO_1982-1994.png" alt = "WWF Logo" class = "img-responsive">
-                <h3>Battle Royal - Cage Match</h3>
+                <h3>Battle Royal - WWF Legends!</h3>
 				</div>
 			</div>
 			<div class = "col-xs-12 col-sm-12 col-md-8 col-md-pull-4 col-lg-8 col-lg-pull-4" id="battle">
@@ -46,14 +46,24 @@
 				<div id = "alerts"></div>
 			</div>
 		</div>
+
+
+
+
+
+
 		<div class = "row">
 			<div class = "col-xs-12 col-sm-12 col-md-8 col-lg-8">
 				<div class="row">
 
 					<!--Game Characters-->
+					
+
+
 					<div id = "available">
 					<p>Tag your <span id="choose">legend!</span></p>
-						<div class = "character col-xs-6 col-sm-6 col-md-3 col-lg-3 thumbnail" id="LukeSkywalker" data-name = "Luke Skywalker" data-hp = "100" data-attack-power = "6" data-counter-attack = "20">
+					<!-- Hulk Hogan -->
+						<div class = "character col-xs-6 col-sm-6 col-md-3 col-lg-3 thumbnail" id="HulkHogan" data-name = "Hulk Hogan" data-hp = "100" data-attack-power = "6" data-counter-attack = "20">
 						  	<!--<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
 						    	<div class="thumbnail">-->
 							    	<div class = "caption">
@@ -62,10 +72,16 @@
 							    	<div class = "charpic">
 						      			<img src="assets/images/Hulk Hogan.jpg" alt="Hulk Hogan">
 						      		</div>
-						      		<div class="caption jedi-HP">100</div>
+						      		<div class="caption wrestlerPts">100</div>  
 						    	<!--</div>
 						  	</div>-->
 						</div>
+						
+
+
+
+
+						<!-- Andre the Giant -->  	
 					  	<div class = "character col-xs-6 col-sm-6 col-md-3 col-lg-3 thumbnail" id = "AndreTheGiant" data-name = "AndreTheGiant" data-hp = "120" data-attack-power = "6" data-counter-attack = "24">
 						  	<!--<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
 						    	<div class="thumbnail">-->
@@ -75,10 +91,15 @@
 							    	<div class = "charpic">
 						      			<img src="assets/images/Andre the Giant.png" alt="Andre the Giant">
 						      		</div>
-						      		<div class="caption jedi-HP">120</div>
+						      		<div class="caption wrestlerPts">120</div>
 						    	<!--</div>
 						  	</div>-->
 					  	</div>
+
+
+
+
+					  	<!-- The Undertaker -->
 					  	<div class = "character col-xs-6 col-sm-6 col-md-3 col-lg-3 thumbnail" id = "TheUndertaker" data-name = "The Undertaker" data-hp = "180" data-attack-power = "6" data-counter-attack = "30">
 						  	<!--<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
 						    	<div class="thumbnail">-->
@@ -88,10 +109,18 @@
 							    	<div class = "charpic">
 						      			<img src="assets/images/the-undertaker-3.jpg" alt="The Undertaker">
 						      		</div>
-						      		<div class="caption jedi-HP">180</div>
+						      		<div class="caption wrestlerPts">180</div>
 						    	<!--</div>
 						  	</div>-->
 					  	</div>
+
+
+
+
+
+
+
+					  	<!-- The Ultimate Warrior -->
 					  	<div class = "character col-xs-6 col-sm-6 col-md-3 col-lg-3 thumbnail" id = "TheUltimateWarrior" data-name = "The Ultimate Warrior" data-hp = "150" data-attack-power = "6" data-counter-attack = "30">
 						  	<!--<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
 						    	<div class="thumbnail">-->
@@ -99,9 +128,16 @@
 							    		The Ultimate Warrior
 							    	</div>
 							    	<div class = "charpic">
-						      			<img src="assets/images/The Ultimate Warrior (9).jpg" alt="The Ultimate Warrior">
+						      			<img src="assets/images/The ultimate warrior (9).jpg" alt="The Ultimate Warrior">
 						      		</div>
-						      		<div class="caption jedi-HP">150</div>
+						      		<div class="caption wrestlerPts">150</div>
+
+
+
+
+
+
+
 						    	<!--</div>
 						  	</div>-->
 					  	</div>
